# ga_quadruped_dhruv

./: .gitignore  MUJOCO_LOG.TXT  README.md  pyproject.toml  swap_cans.sh
assets/: mujoco_test.py
assets/meshes/: calf_link2_1.stl  calf_link4_1.stl  hip_abduction3_1.stl
assets/param/: debug_points.urdf  hip_link_FL.csv  param.urdf  param.xml  quadruped master sheet.xlsx  scene.xml  sizing.csv  trunk.csv
assets/param/meshes/: FL_hip.stl  FL_thigh.stl  FR_thigh.stl  RL_hip.stl  RL_thigh.stl  RR_thigh.stl  link_10_1.stl  link_3_1.stl
assets/param/param/: param.usd
cycle_test/: can_setup.sh  default_pose.py  jump_test.py  quadruped_cycle_test.py
cycle_test/assets/meshes/: calf_link3_1.stl
cycle_test/jump_logs/20250821_074319/: timestamp.txt
cycle_test/jump_logs/20250821_084319/: current.txt  position.txt  timestamp.txt
cycle_test/jump_logs/20250827_161419/: current.txt
cycle_test/jump_logs/20250828_044800/: current.txt  position.txt
cycle_test/quadruped_leg_ik/: ik_client.py  ik_utils.py
cycle_test/quadruped_leg_kinematics/: kinematics.py  param_helper.py
src/ga_quadruped/: can_setup.sh  can_setup2.sh  cycle_test.csv  default_pose.py  logger.py  param_logger.py  policy_agent.py  quadruped_cycle_test.py  runner.py  test.py
urdf_files/: drive_joints.py  force_logger.py  load_model.py  plotter.py  urdf_to_mjcf.py
urdf_files/mjcf/: quadruped_mjcf.xml  reformatted_quadruped_mjcf.xml
urdf_files/mjpc urdf/: ga_modified.xml  load_model.py
urdf_files/urdf/: quadruped.urdf
urdf_files/urdf_assembly_description/: CMakeLists.txt  package.xml
(+195 files in other folders)
