[project]
name = "ga-quadruped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ga-can",
    "mujoco>=3.0.0",
    "numpy",
    "scipy",
    "onnxruntime",
    "matplotlib",
    "opencv-contrib-python",
    "pandas>=2.3.1",
    "blessed>=1.21.0",
    "tqdm>=4.67.1",
    "mujoco-python-viewer",
]

# [project.optional-dependencies]
# ik = [
#     "boros[ik]",
# ]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
# boros = {path = "../boros", editable = true}
ga-can = {path = "../ga-can", editable = true}
ga-quadruped = { workspace = true }

[dependency-groups]
ik = [
    "ga-quadruped[ik]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell Hatch exactly what to include in the wheel
[tool.hatch.build.targets.wheel]
packages = ["src/ga_quadruped"]
